# RMVP_Kit_Tutorial

./: .gitignore  CMakeLists.txt  README.md  generate_test_video.py
RMVP_Kit_Tutorial_1/data/videos/: test_armor.avi
include/yuelu_rm_vision/common/: constants.hpp  types.hpp
include/yuelu_rm_vision/detectors/: detector.hpp  traditional_detector.hpp  yolo_detector.hpp
include/yuelu_rm_vision/modules/: camera.hpp
include/yuelu_rm_vision/predictors/: predictor.hpp
include/yuelu_rm_vision/solvers/: pnp_solver.hpp  solver.hpp
src/: main.cpp
src/modules/: camera.cpp
src/modules/detectors/: traditional_detector.cpp  yolo_detector.cpp
src/modules/solvers/: pnp_solver.cpp
